# tingly-box

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  DESIGN.md  Dockerfile  Dockerfile.run-arm64  README.md  Taskfile.curl.yml  Taskfile.linux.yml  Taskfile.quota.yml  Taskfile.wails.yml  Taskfile.windows.yml  Taskfile.yml  agents.md  docker-compose.yml  docker.npx.Dockerfile  go.mod  go.sum  go.work  go.work.sum  libs  main.go  npx.Dockerfile  openapi.json  package-lock.json  package.json  swagger.json  tasks.md
.claude/: install-sdlc.sh
.design/: adaptive-endpoint-routing.md  affinity.pencil.md  agent-centric-capability-expansion.md  agentboot-refactor.md  anthropic-compat.md  bot-arch.md  bot-lifecycle-restart.md  claude-code-config.md  codex-auth.md  codex-config.md  component-evolution-and-composition.md  connect-provider-flow.md  dashboard-usage-perf.md  dashboard.md  dual-provider.md  failover.pencil.md  feature-highlights.md  fusion-provider.md  harness-codex-client.md  harness-duo.md  harness-matrix.md  host-binding.md  icon-hierarchy.md  image-api-extension.md  imbot-sync.md  kimi-config.md  loadbalance.pencil.md  logging-redesign.md  model-list.md  oauth-reauth.md  oauth.md  onboarding-ux.md  one-m-context.md  openai-endpoint-routing.md  otel.md  priority-routing.md  priority-routing.pencil.md  probe.md  profile-rule-uuid.md  protocol-recording-redesign.md  (+37 more)
Formula/: README.md  generate.rb  tingly-box.rb
afk/: go.mod  go.sum  skill_e2e_test.go
agentboot/: README.md  agent.go  agentboot.go  agentboot_test.go  builder.go  claude_session_bridge.go  config.go  driver.go  e2e_test.go  errors.go  events.go  eventtype.go  go.mod  go.sum  handle.go  handle_test.go  handler.go  message.go  mockagent_test.go  options.go  result.go  result_test.go  run.go  run_test.go  runner.go  runner_config_test.go  runner_execute.go  runner_lifecycle_test.go  runner_shutdown_test.go  runner_state.go  runner_test.go  service.go  service_run_test.go  session.go  session_bridge.go  session_manager.go  types.go  (+1 more)
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: critic_plugin.py  e2e_plugin.py  e2e_run.sh  e2e_run_pin.sh  fusion_plugin.py  rag_experiment.py  rag_plugin.py  router_plugin.py
sdk/python/tests/: test_client_offline.py  test_config.py  test_discovery.py  test_example_plugins.py  test_plugin_manifest.py  test_plugin_register.py  test_plugin_server.py  test_quota.py  test_router_plugin.py  test_rules.py  test_runtime.py  test_transports.py
sdk/python/tingly/: __init__.py  _http.py  cli.py  client.py  config.py  discovery.py  errors.py  scenarios.py
sdk/python/tingly/helpers/: __init__.py  guardrails.py  quota.py  rules.py  usage.py
sdk/python/tingly/plugin/: __init__.py  core.py  manifest.py  register.py  runtime.py  server.py  types.py
sdk/python/tingly/transports/: __init__.py  anthropic_compat.py  openai_compat.py
(+3722 files in other folders)
